--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
           - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
           - bootstrap.memory_lock=true
           - xpack.security.enabled=false
+        ports:
+          - "9200:9200"
         ulimits:
             memlock:
                 soft: -1
