--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,13 @@
     }
   ],
   "require": {
-    "phpunit/phpunit": "7.1.5",
-    "guzzlehttp/guzzle": "6.3.3",
-    "symfony/dom-crawler": "v4.0.9",
-    "symfony/css-selector": "v4.0.9",
-    "php-amqplib/php-amqplib": "^2.7",
-    "elasticsearch/elasticsearch": "^6.0"
+    "phpunit/phpunit": "~7.1.5",
+    "guzzlehttp/guzzle": "~6.3.3",
+    "symfony/dom-crawler": "~v4.0.9",
+    "symfony/css-selector": "~v4.0.9",
+    "php-amqplib/php-amqplib": "~2.7",
+    "elasticsearch/elasticsearch": "^6.0",
+    "monolog/monolog": "~1.23.0"
   },
   "autoload": {
     "psr-4": {
